# mbirjax

./: .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  README.rst  current_status.md  environment.yml  pixi.toml  pyproject.toml  pytest.ini  requirements.txt  setup-old.py  setup.py
.claude/: Parallel sharding.md  README.md  back_projection_overview.md  claude_prompt.md  initial_prompt.md  lessons.md  parallel_options.md  sinogram_sharding.md  status.md
0220/: compute_sino.py  compute_sino_verification.py  correct_bg.py  correct_bg_verification.py  rotat.py  rotat_verification.py  save_partial_sino.py  test_compute_sino.py  test_correct_bg.py  test_preprocessing.py  test_rotat.py
cvpr-2024/: vcd_figs_for_abst.py
demo/: demo_1_shepp_logan.py  demo_2_large_object.py  demo_3D_shepp_logan.py  demo_3_cropped_center_recon.py  demo_4_wrong_rotation_direction.py  demo_5_FBP_FDK.py  demo_5_fbp_fdk.py  demo_6_qggmrf_denoiser.py  demo_7_multiaxis_parallelbeam.py  demo_8_helical_recon.py  demo_9_anisotropic_voxels.py  demo_9_helical_fan.py  demo_cone_beam_shepp_logan.py  demo_conebeam_shepp_logan.py  demo_experiment.py  demo_experiment3.py  demo_parbeam_shepp_logan.py  demo_shepp_logan.py  demo_shepp_logan_large.py  demo_slice_viewer.py  demo_utils.py  diff.py  environment.yml  fdk_big_preprocess_n_fdk.py  fdk_big_with_load.py  pmap_test.py  requirements.txt
dev_scripts/: build_docs.sh  check_cuda.sh  clean_install_all.sh  create_conda_test_environment.sh  deep_clean_conda.sh  deep_clean_repository.sh  get_demo_data_server.sh  install_conda_environment.sh  install_cuda.sh  install_cudnn.sh  install_package.sh  remove_package.sh  run_tests.sh
docs/: Makefile  README.rst  environment.yml  requirements.txt
experiments/: 1203.py  blur_debug.py  cone_beam_dev.py  cube_phantom.py  demo_1_shepp_logan_investigate_convergence.py  demo_5_half_sino.py  demo_half_sino_nsi.py  demo_half_sino_nsi_new.py  exp_prep.py  fbp_exp.py  fbp_experiment.py  fdk_experiment.py  fdk_fbp_experiment.py  hdf5_test.py  large_shepp_logan.py  minimal_forward_projection.py  minimal_forward_projection_torch.py  minimal_requirements.txt  nsi_new_data.py  parallel_model_dev.py  plot_result.py  preprocessing_gpu.py  projection_timing.py  prox_map_experiment.py  prox_test.py  recon timing.txt  recon_conebeam.py  recon_experiments.py  recon_parbeam.py  recon_test.py  recon_test_conebeam.py  recon_test_parbeam.py  sandbox_half_sino.py  sandbox_half_sino_nsi.py  sandbox_shepp_logan.py  shepp_logan_convergence.py  start_viewer.py  translation_model_dev.py  use_fdk_fbp_before_VCP.py  vcd.py  (+2 more)
mbirjax/: __init__.py  _device_setup.py  _test_utils.py  _utils.py  blur.py  bn256.py  cone_beam.py  denoising.py  fan_beam.py  gpu_memory.py  hsnt.py  mbir.py  mbirjax.py  memory_stats.py  multiaxis_parallel.py  multiaxis_parallel_beam.py  parallel_beam.py  parameter_handler.py  plot_utils.py  preprocess.py  preprocess_NSI.py  projectors.py  qggmrf.py  qggmrf_denoiser.py  tomography_model.py  tomography_utils.py  translation_mode.py  translation_model.py  utilities.py  vcd_utils.py  vcls.py  viewer.py
tests/: 1.py  conftest.py  function_test_export_import.py  preprocessing_gpu.py  test_compute_sino_from_scans.py  test_denoiser.py  test_fbp_fdk.py  test_hsnt.py  test_nsi_preprocessing.py  test_preprocessing.py  test_projector_cache_sharing.py  test_projectors.py  test_prox.py  test_qggmrf.py  test_sharding.py  (+14 more)
(+366 files in other folders)
