[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MBIRJAX"
version = "0.1.0"
description = "High-performance tomographic reconstruction"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "MBIRJAX development team", email = "buzzard@purdue.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 3-Clause License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10"
dependencies = [
    "pytest",
    "matplotlib",
    "numpy",
    "scipy",
    "pyyaml",
    "setuptools",
    "jax",
    "jaxlib",
    "sphinx",
    "sphinxcontrib-bibtex",
    "sphinx-book-theme>=1.0.1",
    "sphinx-design",
    "sphinx-copybutton",
    "ruamel.yaml",
    "psutil"
]

[tool.setuptools.packages]
find = {}

[project.urls]
homepage = "https://mbirjax.readthedocs.io"
source = "https://github.com/cabouman/mbirjax"