[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbirjax"
version = "0.3.3"
description = "High-performance tomographic reconstruction"
keywords = ["tomography", "tomographic reconstruction", "computed tomography"]
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "MBIRJAX development team", email = "buzzard@purdue.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
    "setuptools",
    "jax",
    "jaxlib",
    "ruamel.yaml",
    "psutil"
]

[project.optional-dependencies]
test = ["pytest"]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-book-theme>=1.0.1",
     "sphinx-design",
     "sphinx-copybutton"
]

[tool.setuptools.packages]
find = {}

[project.urls]
homepage = "https://mbirjax.readthedocs.io"
source = "https://github.com/cabouman/mbirjax"
