[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbirjax"
version = "0.6.2"
description = "High-performance tomographic reconstruction"
keywords = ["tomography", "tomographic reconstruction", "computed tomography"]
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "MBIRJAX development team", email = "buzzard@purdue.edu" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.9"
dependencies = [
    "jax==0.5.3",
    "jaxlib==0.5.3",
    "matplotlib",
    "numpy",
    "setuptools",
    "ruamel.yaml",
    "psutil",
    "tifffile",
    "h5py",
    "dm-pix",
    "tqdm"
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
test = ["pytest"]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-book-theme>=1.0.1",
     "sphinx-design",
     "sphinx-copybutton"
]

[tool.setuptools.packages]
find = {}

[project.urls]
homepage = "https://mbirjax.readthedocs.io"
source = "https://github.com/cabouman/mbirjax"
